--- a/eigconfig.json
+++ b/eigconfig.json
@@ -2,6 +2,6 @@
 "name": "smtico",
 "website": "",
 "description": "Smtico Op",
-"logo": "https://github.com/sametkat/eigenlayer/logo.png",
+"logo": "https://note.ozcorps.com/images/sf.png",
 "twitter": "https://twitter.com/smtico182774"
 }
