--- a/eigconfig.json
+++ b/eigconfig.json
@@ -1,7 +1,7 @@
 {
-"name": "smtico",
+"name": "ozico",
 "website": "",
-"description": "Smtico Op",
+"description": "Ozico",
 "logo": "https://shouldfinish.ozcorps.com/images/sf.png",
 "twitter": "https://twitter.com/smtico182774"
 }
